Project's code optimization n°2

--- a/src/main/resources/views/about.fxml
+++ b/src/main/resources/views/about.fxml
@@ -6,41 +6,47 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<HBox id="aboutPanel" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="450.0" stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AboutController">
-    
+<HBox xmlns:fx="http://javafx.com/fxml/1" id="aboutPanel" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="450.0"
+      stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="controllers.AboutController">
+
     <children>
         <ImageView fitHeight="90.0" fitWidth="150.0" preserveRatio="true">
             <image>
-                <Image url="@../icons/info.png" />
+                <Image url="@../icons/info.png"/>
             </image>
         </ImageView>
         <GridPane prefHeight="113.0" prefWidth="359.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="90.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
-                <RowConstraints fillHeight="false" maxHeight="59.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="90.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES"/>
+                <RowConstraints fillHeight="false" maxHeight="59.0" minHeight="10.0" prefHeight="59.0"
+                                vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
                 <VBox id="aboutInfosVBox" alignment="BOTTOM_CENTER" prefHeight="150.0" prefWidth="500.0">
                     <children>
                         <Label text="Auteur : Florian RENARD (France)">
                             <font>
-                                <Font size="19.0" />
+                                <Font size="19.0"/>
                             </font>
                         </Label>
                         <Label prefHeight="28.0" prefWidth="352.0" text="Licence : GNU General Public License v3.0">
                             <font>
-                                <Font size="19.0" />
+                                <Font size="19.0"/>
                             </font>
                         </Label>
                     </children>
                 </VBox>
-                <VBox id="aboutCloseButtonVBox" alignment="TOP_CENTER" prefHeight="52.0" prefWidth="280.0" GridPane.rowIndex="2">
+                <VBox id="aboutCloseButtonVBox" alignment="TOP_CENTER" prefHeight="52.0" prefWidth="280.0"
+                      GridPane.rowIndex="2">
                     <children>
-                        <Button id="aboutCloseButton" alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#aboutCloseButtonClicked" prefWidth="65.0" text="OK" />
+                        <Button id="aboutCloseButton" alignment="TOP_CENTER" contentDisplay="CENTER"
+                                mnemonicParsing="false" onAction="#aboutCloseButtonClicked" prefWidth="65.0" text="OK"/>
                     </children>
                 </VBox>
             </children>
