--- a/src/main/resources/views/appCloseConfirmation.fxml
+++ b/src/main/resources/views/appCloseConfirmation.fxml
@@ -6,35 +6,45 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<HBox id="appCloseConfirmationPanel" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="650.0" stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AppCloseConfirmationController">
+<HBox xmlns:fx="http://javafx.com/fxml/1" id="appCloseConfirmationPanel" alignment="CENTER" maxHeight="-Infinity"
+      maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="650.0"
+      stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="controllers.AppCloseConfirmationController">
     <children>
-      <ImageView fitHeight="90.0" fitWidth="150.0" preserveRatio="true">
-         <image>
-            <Image url="@../icons/question.png" />
-         </image></ImageView>
+        <ImageView fitHeight="90.0" fitWidth="150.0" preserveRatio="true">
+            <image>
+                <Image url="@../icons/question.png"/>
+            </image>
+        </ImageView>
         <GridPane prefHeight="113.0" prefWidth="559.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="500.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="500.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
-                <RowConstraints fillHeight="false" maxHeight="59.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES"/>
+                <RowConstraints fillHeight="false" maxHeight="59.0" minHeight="10.0" prefHeight="59.0"
+                                vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <VBox id="appCloseConfirmationQuestionVBox" alignment="BOTTOM_CENTER" prefHeight="150.0" prefWidth="500.0">
+                <VBox id="appCloseConfirmationQuestionVBox" alignment="BOTTOM_CENTER" prefHeight="150.0"
+                      prefWidth="500.0">
                     <children>
                         <Label text="Êtes-vous sûr(e) de bien vouloir fermer l'application WebMusic ?">
                             <font>
-                                <Font size="19.0" />
+                                <Font size="19.0"/>
                             </font>
                         </Label>
                     </children>
                 </VBox>
-                <HBox id="appCloseConfirmationButtonsHBox" alignment="TOP_CENTER" prefHeight="52.0" prefWidth="280.0" GridPane.rowIndex="2">
+                <HBox id="appCloseConfirmationButtonsHBox" alignment="TOP_CENTER" prefHeight="52.0" prefWidth="280.0"
+                      GridPane.rowIndex="2">
                     <children>
-                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#appCloseYesClicked" prefWidth="65.0" styleClass="yesButton" text="Oui" />
-                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#appCloseNoClicked" prefWidth="65.0" styleClass="noButton" text="Non" />
+                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                                onAction="#appCloseYesClicked" prefWidth="65.0" styleClass="yesButton" text="Oui"/>
+                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                                onAction="#appCloseNoClicked" prefWidth="65.0" styleClass="noButton" text="Non"/>
                     </children>
                 </HBox>
             </children>
