--- a/src/main/resources/views/music/listenMusic.fxml
+++ b/src/main/resources/views/music/listenMusic.fxml
@@ -3,14 +3,10 @@
 <!-- MUSIC LISTENING VIEW -->
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.media.MediaView?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="600.0" styleClass="panel" stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.music.ListenMusicController">
    <center>
        <MediaView fx:id="musicListeningMediaView" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER" />
