--- a/src/main/resources/views/music/listenMusic.fxml
+++ b/src/main/resources/views/music/listenMusic.fxml
@@ -7,30 +7,32 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.media.MediaView?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="600.0" styleClass="panel" stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.music.ListenMusicController">
-   <center>
-       <MediaView fx:id="musicListeningMediaView" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
-   <left>
-      <ImageView fx:id="playPauseImageView" onMouseClicked="#playPauseButtonClicked" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="20.0" />
-         </BorderPane.margin>
-      </ImageView>
-   </left>
-   <right>
-      <VBox alignment="CENTER" prefHeight="260.0" prefWidth="462.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="listeningTitleLabel" styleClass="listeningTitle" />
-            <Label fx:id="listeningArtistsLabel" styleClass="listeningLabel" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="listeningLengthHBox">
-               <children>
-                  <Label fx:id="listeningCurrentTimeLabel" styleClass="listeningLabel" />
-                  <Slider fx:id="listeningProgressionSlider" valueChanging="true" />
-                  <Label fx:id="listeningTotalLengthLabel" styleClass="listeningLabel" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </right>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="260.0" prefWidth="600.0" styleClass="panel" stylesheets="/styles/style.css"
+            xmlns="http://javafx.com/javafx/8.0" fx:controller="controllers.music.ListenMusicController">
+    <center>
+        <MediaView fx:id="musicListeningMediaView" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER"/>
+    </center>
+    <left>
+        <ImageView fx:id="playPauseImageView" onMouseClicked="#playPauseButtonClicked" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets left="20.0"/>
+            </BorderPane.margin>
+        </ImageView>
+    </left>
+    <right>
+        <VBox alignment="CENTER" prefHeight="260.0" prefWidth="462.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label fx:id="listeningTitleLabel" styleClass="listeningTitle"/>
+                <Label fx:id="listeningArtistsLabel" styleClass="listeningLabel"/>
+                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="listeningLengthHBox">
+                    <children>
+                        <Label fx:id="listeningCurrentTimeLabel" styleClass="listeningLabel"/>
+                        <Slider fx:id="listeningProgressionSlider" valueChanging="true"/>
+                        <Label fx:id="listeningTotalLengthLabel" styleClass="listeningLabel"/>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </right>
 </BorderPane>
