--- a/src/main/resources/views/album/listAlbum.fxml
+++ b/src/main/resources/views/album/listAlbum.fxml
@@ -2,12 +2,11 @@
 
 <!-- ALBUM LIST PAGE VIEW -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity"
             styleClass="panel"
