--- a/src/main/resources/views/playlist/addPlaylist.fxml
+++ b/src/main/resources/views/playlist/addPlaylist.fxml
@@ -2,17 +2,9 @@
 
 <!-- PLAYLIST ADDING FORM VIEW -->
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import org.controlsfx.control.ListSelectionView?>
-
 <BorderPane fx:id="addPlaylistBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="panel" stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.playlist.AddPlaylistController">
     <top>
         <fx:include source="../common/menu.fxml" />
