--- a/src/main/resources/views/playlist/listPlaylist.fxml
+++ b/src/main/resources/views/playlist/listPlaylist.fxml
@@ -3,7 +3,8 @@
 <!-- PLAYLIST LIST PAGE VIEW -->
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
