--- a/src/main/resources/views/album/listenAlbum.fxml
+++ b/src/main/resources/views/album/listenAlbum.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.media.MediaView?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity"
             prefHeight="260.0" prefWidth="600.0" styleClass="panel" stylesheets="/styles/style.css"
             xmlns="http://javafx.com/javafx/8.0" fx:controller="controllers.album.ListenAlbumController">
     <center>
