--- a/src/main/resources/views/music/errors/musicFileError.fxml
+++ b/src/main/resources/views/music/errors/musicFileError.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+<HBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity"
       minWidth="-Infinity" prefHeight="113.0" prefWidth="470.0" styleClass="panel"
       stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0"
       fx:controller="controllers.music.ListMusicController">
