--- a/src/main/resources/views/music/listMusic.fxml
+++ b/src/main/resources/views/music/listMusic.fxml
@@ -2,7 +2,10 @@
 
 <!-- MUSIC LIST PAGE VIEW -->
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -25,7 +28,7 @@
                         <RowConstraints/>
                     </rowConstraints>
                     <children>
-                        <TableView fx:id="listMusic" focusTraversable="false">
+                        <TableView fx:id="listMusic" maxHeight="389.0">
                             <columns>
                                 <TableColumn fx:id="titreColumn" text="Titre"/>
                                 <TableColumn fx:id="artisteColumn" editable="false" sortable="false" minWidth="150.0" text="Artiste(s)"/>
@@ -33,6 +36,58 @@
                                 <TableColumn fx:id="albumColumn" text="Album"/>
                             </columns>
                         </TableView>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="15.0"/>
+                    </VBox.margin>
+                </GridPane>
+                <GridPane BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES"/>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES"/>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                    </rowConstraints>
+                    <children>
+                        <Label fx:id="nbMusic" styleClass="paginationLabel" alignment="CENTER" textAlignment="CENTER"
+                               GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                        <HBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                            <Button fx:id="firstPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="STEP_BACKWARD" size="32.0"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="fifthPreviousPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="BACKWARD" size="32.0"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="previousPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="CARET_LEFT" size="32.0"/>
+                                </graphic>
+                            </Button>
+                            <Label fx:id="currentPage" styleClass="paginationLabel"/>
+                            <Button fx:id="nextPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="CARET_RIGHT" size="32.0"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="fifthNextPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="FORWARD" size="32.0"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="lastPage" styleClass="paginationBarButton">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="STEP_FORWARD" size="32.0"/>
+                                </graphic>
+                            </Button>
+                        </HBox>
+                        <Label fx:id="nbPage" styleClass="paginationLabel" alignment="CENTER" textAlignment="CENTER"
+                               GridPane.columnIndex="2" GridPane.rowIndex="0"/>
                     </children>
                 </GridPane>
             </children>
